--- a/application/configs/application.ini.template
+++ b/application/configs/application.ini.template
@@ -26,43 +26,35 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
 ;resources.view.encoding = "UTF-8"
 resources.view.basePath = APPLICATION_PATH "/views/"
 
-; Database
-;resources.db.adapter = "pdo_mysql"
-;resources.db.params.host = "localhost"
-;resources.db.params.dbname = "mountainboardfr"
-;resources.db.params.username = "mountainboardfr"
-;resources.db.params.password = "5buo;8QY"
-;resources.db.isDefaultTableAdapter = true
-
 ; Session
 resources.session.save_path = APPLICATION_PATH "/../data/sessions"
 resources.session.remember_me_seconds = 864000
 
 ; Constants
-constants.AUTHCHECK = 'ra45HuiB@'
+constants.AUTHCHECK = 'password'
 constants.MAINTENANCE = false
 constants.DEBUG = false
 constants.PROFILE = false
 constants.CHAT_ENABLED = false;
 
+; Database
 constants.GLOBAL_DB_HOST = 'localhost'
-constants.GLOBAL_DB_NAME = 'mountainboardfr_production'
-constants.GLOBAL_DB_USER = 'mountainboardfr'
-constants.GLOBAL_DB_PASSWORD = '5buo;8QY'
+constants.GLOBAL_DB_NAME = 'ridedb_prod'
+constants.GLOBAL_DB_USER = 'ridedb'
+constants.GLOBAL_DB_PASSWORD = ''
 constants.GLOBAL_DB_ENCODING = 'utf8'
 
-constants.EMAIL_FROM = 'no-reply@mountainboard.fr'
-constants.EMAIL_FROM_STRING = 'no-reply@mountainboard.fr'
-constants.APP_EMAIL_FROM_STRING = 'mountainboard.fr'
+; Email and contact
+constants.EMAIL_FROM = 'no-reply@ridedb.org'
+constants.EMAIL_FROM_STRING = 'no-reply@ridedb.org'
+constants.APP_EMAIL_FROM_STRING = 'ridedb.org'
 constants.APP_EMAIL_SENDER_NAME = 'no-reply'
-constants.APP_EMAIL_CONTACT = 'mgramont@gmail.com'
-constants.GLOBAL_EMAIL_DEBUG = 'no-reply@mountainboard.fr'
+constants.APP_EMAIL_CONTACT = 'yoursecretemail@wherever.com'
+constants.GLOBAL_EMAIL_DEBUG = 'no-reply@ridedb.org'
 constants.GLOBAL_MAIL_USE_STMP = false
-constants.CONTACT_EMAIL_TITLE = 'mountainboard.fr - contact'
+constants.CONTACT_EMAIL_TITLE = 'ridedb.org - contact'
 
-constants.OLD_SITE_PATH = '/var/www/www.mountainboard.fr/current/data/old/backup_migration_20100914_1826/'
 constants.APP_DEBUGDIR = '../data/logs/api/'
-constants.APP_MENU_FILE = 'menu.xml'
 
 constants.GLOBAL_LANG_PATH = '../application/configs/lang/'
 constants.GLOBAL_LANG_DEFAULT = 'fr'
@@ -83,18 +75,15 @@ constants.GLOBAL_DEFAULT_IMG_THUMB_QUALITY = 50
 constants.GLOBAL_DEFAULT_IMG_THUMB_WIDTH = 200
 constants.GLOBAL_DEFAULT_IMG_THUMB_HEIGHT = 200
 
-constants.CURRENT_SITE = 'mountainboard.fr'
-constants.GLOBAL_DOMAIN = 'mountainboard'
-constants.GLOBAL_EXTENSION = 'fr'
-constants.GLOBAL_DOMAIN_FULL = 'mountainboard.fr'
-constants.GLOBAL_DOMAIN_FULL_AND_SUB_OLD = 'www.mountainboard.fr'
-constants.COOKIE_DOMAIN = 'www.mountainboard.fr'
-constants.CHAT_DOMAIN_FULL = 'www.mountainboard.fr'
-constants.CHAT_PORT = 8080
-constants.APP_SUBDOMAIN = 'www'
-constants.APP_URL = 'http://www.mountainboard.fr'
-constants.APP_NAME = 'moutainboard.fr'
-constants.APP_SLOGAN = 'le Mountainboard en France'
+constants.CURRENT_SITE = 'ridedb.org'
+constants.GLOBAL_DOMAIN = 'ridedb'
+constants.GLOBAL_EXTENSION = 'org'
+constants.GLOBAL_DOMAIN_FULL = 'ridedb.org'
+constants.COOKIE_DOMAIN = 'ridedb.org'
+constants.APP_SUBDOMAIN = 'api'
+constants.APP_URL = 'http://api.ridedb.org'
+constants.APP_NAME = 'ridedb.org'
+constants.APP_SLOGAN = ''
 
 constants.ALLOW_CACHE = true
 constants.APP_CACHE_ACTIVE = true
@@ -116,27 +105,24 @@ constants.OPENID_ACTIVE = false
 constants.NOREALDATA_MARK = '__NOREALDATA__'
 constants.ROUTES_CONF_FORMAT = 'xml'
 
-; beta.mountainboard.fr
-;constants.GOOGLEMAPS_API_KEY = 'ABQIAAAA2fX-mBaAGdPrivo8gYu_gRSRDTJrJ6EFWs1chm3CpIpR-k8nPRT1Ds-3UgxNLaBz6kuuVT1nWySChQ'
-; www.mountainboard.fr
-constants.GOOGLEMAPS_API_KEY = 'ABQIAAAA2fX-mBaAGdPrivo8gYu_gRTLr4aE79MRFYYU-RWy0Bz-DBGW8BREt3QhGv0z6NfnlbBq38zc6OfWnA'
-
+; google maps
 constants.GOOGLEMAPS_VERSION = '2.160'
 constants.GOOGLEMAPS_URL = 'http://maps.google.com/maps?file=api&amp;v=2.160&amp;sensor=true&amp;key=ABQIAAAA2fX-mBaAGdPrivo8gYu_gRTLr4aE79MRFYYU-RWy0Bz-DBGW8BREt3QhGv0z6NfnlbBq38zc6OfWnA'
 constants.APP_GOOGLE_MAPS_ACTIVE = true
 constants.DEFAULT_MEDIA_MAP_ZOOM = 6;
 constants.GOOGLEMAPS_URL_NEW = 'http://maps.google.com/maps/api/js?sensor=false'
 
-;mikael.gramont
-constants.FLICKR_API_KEY = '295efac073580073e1a7b34b8967893f'
-constants.FLICKR_API_SECRET = '82a82db17e74ce07'
+; flickr
+constants.FLICKR_API_KEY = ''
+constants.FLICKR_API_SECRET = ''
 
-constants.VIMEO_API_KEY = '56c182c925c09d52983c5d421ac97363'
-constants.VIMEO_API_KEY = 'e9abb1810'
+; vimeo
+constants.VIMEO_API_KEY = ''
 
-constants.YOUTUBE_APPLICATION_ID = 'mountainboardfr-dev-1'
-constants.YOUTUBE_CLIENT_ID = 'ytapi-MikaelGramont-mountainboardfr-ltv03l22-0'
-constants.YOUTUBE_API_KEY = 'AI39si7HkB7Gwop69SivtWC0yQ4iCKbPtIdazP-Ci8hoVWUJHV2NZF7HCE9hlA8KFAaveMcr-oBUO1wknvNHuzzVOl4MNnQkxg'
+; youtube
+constants.YOUTUBE_APPLICATION_ID = ''
+constants.YOUTUBE_CLIENT_ID = ''
+constants.YOUTUBE_API_KEY = ''
 
 constants.APP_PAGE_ENCODING = 'utf-8'
 constants.APP_PAGE_DOCTYPE = 'XHTML1_STRICT'
@@ -148,32 +134,10 @@ constants.APP_PAGE_LANGUAGE = 'fr-FR'
 constants.APP_DEFAULT_LAYOUT = 'one-column'
 constants.APP_ONE_COLUMN_LAYOUT = 'one-column'
 
-constants.APP_THEME = 'default'
-constants.APP_VIEW_TITLE_SEPARATOR = ' - '
-constants.CSS_PATH = 'css/default/'
-constants.IMAGES_PATH = 'images/default/'
-constants.SMILEYS_PATH = 'images/smileys'
-constants.AVATARS_PATH = 'media/avatars/'
-constants.SCRIPTS_PATH = 'js/'
-constants.SWF_PATH = 'swf/default/'
-
-constants.JQUERY_VERSION = '1.4.2'
-constants.JQUERYUI_VERSION = '1.8.2'
-constants.JQUERY_USE_CDN = true
-constants.JQUERY_USE_UI_CDN = true
-constants.JQUERY_USE_UI_CSS_CDN = false
-constants.JQUERY_LOCAL_PATH = 'js/jquery/1.4.2/jquery.js'
-constants.JQUERYUI_LOCAL_PATH = 'js/jqueryui/1.8.2/ui/jquery.ui.all.js'
-constants.JQUERYUI_CSS_CDN = 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/base/jquery-ui.css'
-constants.UPLOADIFY_VERSION = '2.1.0'
-constants.UPLOADIFY_DIR = 'uploadify/2.1.0/'
-constants.UPLOADIFY_PATH = 'uploadify/2.1.0/uploadify.js'
-
-constants.USE_CDN = true;
-;constants.CDN_URL = 'http://resources.mikarlgramont.netdna-cdn.com/';
-constants.CDN_URL = 'http://images.cdn.mountainboard.fr/';
-constants.CSS_CDN_URL = 'http://cdn.mountainboard.fr/';
-constants.JS_CDN_URL = 'http://cdn.mountainboard.fr/';
+constants.USE_CDN = false;
+constants.CDN_URL = '';
+constants.CSS_CDN_URL = '';
+constants.JS_CDN_URL = '';
 
 constants.ANALYTICS_CODE = 'UA-1462148-1'
 
@@ -185,12 +149,6 @@ constants.SWFOBJECT_EXPRESS_INSTALL_LOCAL_PATH = 'js/swfobject/2.1/expressInstal
 
 constants.FRONTPAGE_ITEMS_PER_PAGE = 8
 
-constants.CONTENT_DIRECTORY = 'content/'
-constants.CONTENT_DEFAULT_FILENAME = 'index.phtml'
-constants.CONTENT_DIRECTORY_NEWS = 'content/news/'
-constants.CONTENT_DIRECTORY_DOSSIERS = 'content/dossiers/'
-constants.CONTENT_DIRECTORY_EVENTS = 'content/events/'
-constants.CONTENT_DIRECTORY_TESTS = 'content/tests/'
 constants.LOGGEDOUT_USERS_SEE_COMMENTS = true
 
 constants.NEW_STUFF_CACHE_LIFETIME = 200
@@ -239,99 +197,37 @@ constants.DEFAULT_LONGITUDE = 2.724609375
 constants.DEFAULT_LATITUDE = 47.06263847995432
 constants.DEFAULT_ZOOM = 6
 constants.DEFAULT_MAP_TYPE = 'map'
-constants.DPT_KML_URL = 'http://www.mountainboard.fr/kml/'
 
 constants.PRIVATE_MESSAGES_MAX_PER_PAGE = i20
 constants.PRIVATE_MESSAGES_MAX_PREVIEW_LENGTH = 100
-
-constants.FACEBOOK_PAGE_URL = 'http://www.facebook.com/mountainboard.fr'
-constants.FACEBOOK_SITE_ID = 123809320058
-
-; mountainboard.fr
-constants.FACEBOOK_APP_ID = 155357247851920
-constants.FACEBOOK_API_KEY = '822e35ec6df47984cb0bc3bcee647812'
-constants.FACEBOOK_APP_SECRET = 'ba98df24401caa8f30f2ca484369bd9f'
 
 constants.THUMBNAIL_ROTATION_MIN = -5
 constants.THUMBNAIL_ROTATION_MAX = 5
 
 constants.DEFAULT_GOTO_IMAGE = 'goTo.png'
 
-constants.SPHINX_HOST = 'localhost'
-constants.SPHINX_PORT = 3312
-
 constants.LOCATION_DIST_MAX_KM = 200
 constants.LOCATION_DIST_MAX_MILES = 200
 
 constants.DEFAULT_CHECKIN_DURATION = 14400
 
-[development : production]
-
-; Debug output
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
-
-; Database
-;resources.db.params.username = "root"
-;resources.db.params.password = ""
-constants.GLOBAL_DB_USER = 'root'
-constants.GLOBAL_DB_NAME = 'mountainboardfr_production'
-constants.GLOBAL_DB_PASSWORD = ''
-
-; Constants
-constants.DEBUG = true
-constants.PROFILE = true
-
-constants.GLOBAL_DB_USER = 'root'
-constants.GLOBAL_DB_PASSWORD = ''
-
-constants.GLOBAL_CACHE_METHOD = 'APC'
-constants.APP_CACHE_METHOD = 'APC'
-
-constants.EMAIL_FROM = 'mgramont@gmail.com'
-constants.EMAIL_FROM_STRING = 'mgramont@gmail.com'
-
-constants.GLOBAL_DOMAIN = 'redesign-zend'
-constants.GLOBAL_DOMAIN_FULL = 'redesign-zend.fr'
-constants.GLOBAL_DOMAIN_FULL_AND_SUB_OLD = 'www.redesign-zend.fr'
-constants.CHAT_DOMAIN_FULL = 'www.redesign-zend.fr'
-constants.APP_URL = 'http://www.redesign-zend.fr'
-constants.APP_SUBDOMAIN = 'www'
-constants.COOKIE_DOMAIN = 'api.redesign-zend.fr'
-
-constants.FACEBOOK_APP_ID = 155357247851920
-constants.FACEBOOK_API_KEY = '822e35ec6df47984cb0bc3bcee647812'
-constants.FACEBOOK_APP_SECRET = 'ba98df24401caa8f30f2ca484369bd9f'
-
-
-; www.redesign-zend.fr
-constants.GOOGLEMAPS_API_KEY = 'ABQIAAAA2fX-mBaAGdPrivo8gYu_gRTIn9hitqSCgxdcSL7MmGGz_zXjVBS16hRsXxrEmqiNY-yOtXV6aikSzw'
-constants.GOOGLEMAPS_URL = 'http://maps.google.com/maps?file=api&amp;v=2.160&amp;sensor=true&amp;key=ABQIAAAA2fX-mBaAGdPrivo8gYu_gRTIn9hitqSCgxdcSL7MmGGz_zXjVBS16hRsXxrEmqiNY-yOtXV6aikSzw'
-
-;redesign-zend.fr
-constants.FACEBOOK_APP_ID = 145341198861522
-constants.FACEBOOK_API_KEY = '1b0ca42d222b5f4a40c60df4283fd41c'
-constants.FACEBOOK_APP_SECRET = '2877bc360c8ac414be6f3ead9410516a'
-
-
 [test : production]
-
 
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
 constants.APP_DEBUGDIR = '../data/logs/test/'
 
-constants.GLOBAL_DOMAIN = 'redesign-zend'
-constants.GLOBAL_EXTENSION = 'fr'
-constants.GLOBAL_DOMAIN_FULL = 'redesign-zend.fr'
+constants.GLOBAL_DOMAIN = 'api.ridedb'
+constants.GLOBAL_EXTENSION = 'dev'
+constants.GLOBAL_DOMAIN_FULL = 'api/ridedb.dev'
 
 constants.APP_SUBDOMAIN = 'test'
-constants.APP_URL = 'http://test.redesign-zend.fr'
-constants.COOKIE_DOMAIN = 'test.redesign-zend.fr'
+constants.APP_URL = 'http://test.api.ridedb.dev'
+constants.COOKIE_DOMAIN = 'test.api.ridedb.dev'
 
 constants.DEBUG = false
-constants.GLOBAL_DB_NAME = 'mountainboardfr_test'
+constants.GLOBAL_DB_NAME = 'ridedb_test'
 constants.GLOBAL_DB_USER = 'root'
 constants.GLOBAL_DB_PASSWORD = ''
 
