--- a/package.json
+++ b/package.json
@@ -2,28 +2,26 @@
   "name": "ridedb",
   "version": "0.0.1",
   "description": "The REST API for SurfingDirt",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mikaelgramont/RideDB.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mikaelgramont/RideDB/issues"
-  },
-  "homepage": "https://github.com/mikaelgramont/RideDB#readme",
   "dependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-require-context-hook": "^1.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -32,8 +30,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^23.6.0",
+    "node-fetch": "^2.3.0",
     "nodeunit": "^0.11.3",
     "prettier-eslint": "^8.8.2",
+    "regenerator-runtime": "^0.13.1",
     "sinon": "^7.2.2"
   }
 }
