--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "nodeunit": "^0.11.3",
     "prettier-eslint": "^8.8.2",
     "regenerator-runtime": "^0.13.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "sinon": "^7.2.2"
   }
 }
