--- a/application/configs/application.ini.template
+++ b/application/configs/application.ini.template
@@ -14,6 +14,10 @@ constants.GLOBAL_DB_ENCODING = 'utf8'
 resources.session.save_path = APPLICATION_PATH "/../data/sessions"
 resources.session.remember_me_seconds = 864000
 
+;Memcached
+constants.MEMCACHED_HOST = 'memcached'
+constants.MEMCACHED_PORT = 11211
+
 ; Constants
 constants.AUTHCHECK = 'password'
 constants.MAINTENANCE = false
