Added user creation tests, as well as test DB reset. Made POST requests return the whole object. Fixed issue in User form validation where password confirmation errors would throw exceptions instead of returning errors.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^23.6.0",
     "nodeunit": "^0.11.3",
     "prettier-eslint": "^8.8.2",
+    "promise-mysql": "^3.3.1",
     "regenerator-runtime": "^0.13.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
