--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^23.6.0",
+    "jsonwebtoken": "^8.4.0",
     "nodeunit": "^0.11.3",
     "prettier-eslint": "^8.8.2",
     "promise-mysql": "^3.3.1",
