Added comment in Dockerfile

--- a/docker/rest-api/Dockerfile
+++ b/docker/rest-api/Dockerfile
@@ -36,6 +36,12 @@ RUN echo 'xdebug.remote_port=9000' >> /usr/local/etc/php/conf.d/docker-php-ext-x
 RUN echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 RUN echo 'xdebug.remote_host=host.docker.internal' >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
-COPY ./apache2.conf /etc/apache2/
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
+COPY apache2.conf /etc/apache2/
 
 RUN a2enmod rewrite headers
+
+# Pas possible de faire ca, sauf si on a installe les fichiers via git clone avant:
+#WORKDIR library/vendor
+#RUN composer install
