--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "installdevdb": "mysql surfingdirtcom_dev -uroot < data/sql/structure.sql",
     "installtestdb": "mysql ridedb_test -uroot < data/sql/structure.sql",
     "resetdevdb": "mysql surfingdirtcom_dev -uroot < data/sql/dev_fixtures.sql",
+    "resetbeta": "mysql surfingdirtcom_beta -uroot < data/sql/dev_fixtures.sql",
     "resettestdb": "mysql ridedb_test -uroot < data/sql/test_fixtures.sql"
   },
   "repository": {
