Updating Docker files

--- a/apache2.conf
+++ b/apache2.conf
@@ -14,7 +14,7 @@ HostnameLookups Off
 RewriteEngine on
 
 # LOGS
-LogLevel debug
+LogLevel warn
 ErrorLog /var/www/html/data/logs/api/error.log
 CustomLog /var/www/html/data/logs/api/access.log combined
 
