--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,14 @@ services:
     image: memcached:1.4
     ports:
       - "11212:11211"
-  web:
-    # Decommenter cette ligne pour forcer a recompiler l'image (et recopier les changements de conf)
-    build: .
-    # References image with tag php:7.2.2-apache, built with docker build -t php:7.2.2-apache .
-    image: php:7.2.2-apache
-    container_name: php_web
+  api:
+    environment:
+            - APPLICATION_ENV=beta
+    image: surfingdirt/api:2
+    container_name: api
     volumes:
-      - /Library/WebServer/Documents/www.local.wrk:/var/www/html/
-      # voir pour "monter" le fichier de conf
-      # faire un start/stop apres chaque modif
+      - /home/mikael/www/beta/api/:/var/www/html/
     ports:
-      - "80:80"
+      - "8006:80"
     stdin_open: true
     tty: true
