--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,11 @@
   "presets": [
     [
       "@babel/preset-env",
+      {
+        "targets": {
+          "node": true
+        },
+      },
     ],
   ],
 }
