--- a/application/configs/application.ini.template
+++ b/application/configs/application.ini.template
@@ -18,7 +18,7 @@ resources.session.save_path = APPLICATION_PATH "/../data/sessions"
 resources.session.remember_me_seconds = 864000
 
 ;Memcached
-constants.MEMCACHED_HOST = 'memcached'
+constants.MEMCACHED_HOST = 'memcached_production'
 constants.MEMCACHED_PORT = 11211
 constants.CLEAN_CACHE_KEY = '123'
 
