--- a/application/configs/application.ini.template
+++ b/application/configs/application.ini.template
@@ -7,6 +7,12 @@ phpSettings.error_log = '../data/logs/api/php_error_log'
 phpSettings.html_errors = 0
 phpSettings.log_errors = 1
 
+; Tracing
+constants.OPENTRACING_ENABLED = false
+constants.OPENTRACING_SERVICE_NAME = 'api'
+constants.OPENTRACING_ENDPOINT_HOST = 'zipkin'
+constants.OPENTRACING_ENDPOINT_PORT = 9411
+
 ; Database
 constants.GLOBAL_DB_HOST = 'localhost'
 constants.GLOBAL_DB_NAME = 'ridedb_prod'
