--- a/docker-compose.beta.yml
+++ b/docker-compose.beta.yml
@@ -3,15 +3,20 @@
 version: '3'
 
 services:
-  memcached_beta:
+  zipkin:
+    container_name: zipkin_beta
+    image: openzipkin/zipkin:latest
+    ports:
+      - "9411:9412"
+  memcached:
     image: memcached:1.4
     container_name: memcached_beta
     ports:
       - "11213:11211"
-  api_beta:
+  api:
     environment:
             - APPLICATION_ENV=beta
-    image: surfingdirt/rest-api:3
+    image: surfingdirt/rest-api:4
     container_name: api_beta
     volumes:
       - /home/mikael/www/beta/api/:/var/www/html/
