Added commands to start the docker image

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "installtestdb": "mysql ridedb_test -uroot < data/sql/structure.sql",
     "resetdevdb": "mysql surfingdirtcom_dev -uroot < data/sql/dev_fixtures.sql",
     "resetbeta": "mysql surfingdirtcom_beta -uroot < data/sql/dev_fixtures.sql",
-    "resettestdb": "mysql ridedb_test -uroot < data/sql/test_fixtures.sql"
+    "resettestdb": "mysql ridedb_test -uroot < data/sql/test_fixtures.sql",
+    "runbeta": "docker-compose -p beta -f docker-compose.beta.yml up -d",
+    "runprod": "docker-compose -p production -f docker-compose.production.yml up -d"
   },
   "repository": {
     "type": "git",
