--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,7 +19,7 @@ services:
     image: surfingdirt/rest-api:5
     container_name: api_dev
     volumes:
-      - /Library/WebServer/Documents/www.local.wrk:/var/www/html/
+      - /Library/WebServer/Documents/www.local.wrk/RideDB:/var/www/html/
     ports:
       - "80:80"
     stdin_open: true
