--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "resetdevdb": "mysql surfingdirtcom_dev -uroot < data/sql/dev_fixtures.sql",
     "resetbeta": "mysql surfingdirtcom_beta -uroot < data/sql/dev_fixtures.sql",
     "resettestdb": "mysql ridedb_test -uroot < data/sql/test_fixtures.sql",
-    "runbeta": "docker-compose -p beta -f docker-compose.beta.yml up -d",
+
+    "startbeta": "docker-compose -p beta -f docker-compose.beta.yml up -d",
+    "stopbeta": "docker-compose -p beta -f docker-compose.beta.yml down",
+
     "runprod": "docker-compose -p production -f docker-compose.production.yml up -d",
-    "startdev": "docker-compose -p dev -f docker-compose.dev.yml up -d"
+    "startprod": "docker-compose -p production -f docker-compose.production.yml down",
+
+    "starttest": "docker-compose -p test -f docker-compose.test.yml up -d",
+    "stoptest": "docker-compose -p test -f docker-compose.test.yml down",
+
+    "startdev": "docker-compose -p dev -f docker-compose.dev.yml up -d",
+    "stopdev": "docker-compose -p dev -f docker-compose.dev.yml down"
   },
   "repository": {
     "type": "git",
