--- a/application/configs/application.ini.template
+++ b/application/configs/application.ini.template
@@ -55,6 +55,8 @@ constants.CONTACT_EMAIL_TITLE = 'ridedb.org - contact'
 
 constants.APP_DEBUGDIR = '../data/logs/api/'
 
+constants.DEFAULT_LOCALE = 'en-US'
+
 constants.GLOBAL_LANG_PATH = '../application/configs/lang/'
 constants.GLOBAL_LANG_DEFAULT = 'fr'
 constants.GLOBAL_SUPPORTED_LANG = 'fr,en'
