--- a/application/configs/application.ini.template
+++ b/application/configs/application.ini.template
@@ -57,7 +57,7 @@ constants.CONTACT_EMAIL_TITLE = 'ridedb.org - contact'
 constants.APP_DEBUGDIR = '../data/logs/api/'
 
 constants.DEFAULT_LOCALE = 'en-US'
-constants.SUPPORTED_LOCALES = 'en-US,fr-FR'
+constants.SUPPORTED_LOCALES = 'en-US,fr-FR,es-ES'
 
 constants.GLOBAL_LANG_PATH = '../application/configs/lang/'
 constants.GLOBAL_LANG_DEFAULT = 'fr'
