--- a/package.json
+++ b/package.json
@@ -11,16 +11,12 @@
     "resetdevdb": "mysql surfingdirtcom_dev -uroot < data/sql/dev_fixtures.sql",
     "resetbeta": "mysql surfingdirtcom_beta -uroot < data/sql/dev_fixtures.sql",
     "resettestdb": "mysql ridedb_test -uroot < data/sql/test_fixtures.sql",
-
     "startbeta": "docker-compose -p beta -f docker-compose.beta.yml up -d",
     "stopbeta": "docker-compose -p beta -f docker-compose.beta.yml down",
-
     "startprod": "docker-compose -p production -f docker-compose.production.yml up -d",
     "stopprod": "docker-compose -p production -f docker-compose.production.yml down",
-
     "starttest": "docker-compose -p test -f docker-compose.test.yml up -d",
     "stoptest": "docker-compose -p test -f docker-compose.test.yml down",
-
     "startdev": "docker-compose -p dev -f docker-compose.dev.yml up -d",
     "stopdev": "docker-compose -p dev -f docker-compose.dev.yml down"
   },
@@ -57,5 +53,8 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sinon": "^7.5.0"
+  },
+  "devDependencies": {
+    "jest-each": "^26.0.1"
   }
 }
